--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-htmlmin": "^1.1.3",
     "gulp-inject": "^1.3.1",
     "gulp-jshint": "^1.11.2",
+    "gulp-less": "^3.0.3",
     "gulp-load-plugins": "^1.0.0-rc.1",
     "gulp-minify-css": "^1.2.0",
     "gulp-ng-html2js": "^0.2.0",
