--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-jshint": "^1.11.2",
     "gulp-less": "^3.0.3",
     "gulp-load-plugins": "^1.0.0-rc.1",
+    "gulp-main-bower-files": "^1.2.4",
     "gulp-minify-css": "^1.2.0",
     "gulp-ng-html2js": "^0.2.0",
     "gulp-notify": "^2.2.0",
@@ -35,7 +36,6 @@
     "gulp-watch": "^4.2.4",
     "gulp.spritesmith": "^3.8.2",
     "jshint-stylish": "^2.0.1",
-    "main-bower-files": "^2.8.2",
     "q": "^1.4.1"
   },
   "scripts": {
